bio 쪽 patent 정리
17.10.8

--- a/1 patent data processing/1_USPTO Patent selection.ipynb
+++ b/1 patent data processing/1_USPTO Patent selection.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. NBER, granted year 고르기"
+    "### 1. NBER=2,4 or NBER=3 / granted year=08~12 고르기"
    ]
   },
   {
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "raw = open('raw_app/historical_masterfile.csv')\n",
+    "raw = open('raw_uspto/historical_masterfile.csv')\n",
     "reader = csv.reader(raw)\n",
     "header = reader.next()\n",
     "header"
@@ -85,14 +85,14 @@
    },
    "outputs": [],
    "source": [
-    "NBER = ['2','4']\n",
+    "IT = ['2','4']\n",
     "YEAR = []   \n",
     "for i in range(0,5):\n",
-    "    y=2006\n",
+    "    y=2008\n",
     "    y += i\n",
     "    YEAR.append(str(y))\n",
     "\n",
-    "with open('raw_app/historical_masterfile.csv','rb') as raw,open('uspto_EE&CC_06_10.csv','wb') as sel:\n",
+    "with open('raw_uspto/historical_masterfile.csv','rb') as raw,open('uspto_EE&IT_08_12.csv','wb') as sel:\n",
     "    reader = csv.reader(raw)\n",
     "    header = reader.next()\n",
     "    \n",
@@ -100,35 +100,26 @@
     "    writer.writerow(header)\n",
     "    \n",
     "    for line in reader:\n",
-    "        if line[3][0] in NBER and line[9][-4:] in YEAR:\n",
-    "            writer.writerow(line)    "
+    "        if line[3][0] in IT and line[9][-4:] in YEAR:\n",
+    "            writer.writerow(line)    \n",
+    "            \n",
+    "with open('raw_usptohistorical_masterfile.csv','rb') as raw,open('uspto_BIO_08_12.csv','wb') as sel:\n",
+    "    reader = csv.reader(raw)\n",
+    "    header = reader.next()\n",
+    "    \n",
+    "    writer = csv.writer(sel)\n",
+    "    writer.writerow(header)\n",
+    "    \n",
+    "    for line in reader:\n",
+    "        if line[3][0] =='3' and line[9][-4:] in YEAR:\n",
+    "            writer.writerow(line)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. 일단 2010 고르기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('uspto_hist_EE&CC_06_10.csv','rb') as raw,open('uspto_hist_EE&CC_10.csv','wb') as sel:\n",
-    "    reader = csv.reader(raw)\n",
-    "    header = reader.next()\n",
-    "    \n",
-    "    writer = csv.writer(sel)\n",
-    "    writer.writerow(header)\n",
-    "    \n",
-    "    for line in reader:\n",
-    "        if line[9][-4:] == '2010':\n",
-    "            writer.writerow(line)"
+    "** *이거 하고 엑셀로 column 이름 수정 (patent -> patent_id), column 일부 제거 **"
    ]
   }
  ],
