--- a/1 patent data processing/3_USPTO_hist Fung merge.ipynb
+++ b/1 patent data processing/3_USPTO_hist Fung merge.ipynb
@@ -23,8 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -36,9 +38,9 @@
        " 'appl_dt',\n",
        " 'disp_dt',\n",
        " 'assignee',\n",
+       " 'pdpass',\n",
        " 'country_code',\n",
        " 'state_code',\n",
-       " 'pdpass',\n",
        " 'num_assignees',\n",
        " 'num_claims',\n",
        " 'num_foreign_citations',\n",
@@ -49,7 +51,7 @@
        " 'num_self_future_citations']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,25 +63,30 @@
     "\n",
     "os.chdir('E:/apps')\n",
     "\n",
-    "df=pd.read_csv('uspto_hist_EE&CC_10.csv')\n",
-    "cols = ['patent_id','nber','uspc','uspc_sub','appl_dt','disp_dt']\n",
-    "df=df[cols]\n",
+    "df=pd.read_csv('uspto_EE&IT_08_12.csv')\n",
     "df = df.loc[df['patent_id']>0,:]\n",
     "\n",
     "df1=pd.read_csv('fung/patent_fung.csv')\n",
     "df = df.merge(df1, on='patent_id', how='left', sort=True)\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
     "list(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df.to_csv('patent_EE&CC_10_vars.csv', index=False)"
+    "df.to_csv('patent_EE&IT_08_12_vars.csv', index=False)\n",
+    "\n",
+    "df=pd.read_csv('uspto_BIO_08_12.csv')\n",
+    "df = df.loc[df['patent_id']>0,:]\n",
+    "df = df.merge(df1, on='patent_id', how='left', sort=True)\n",
+    "df.to_csv('patent_BIO_08_12_vars.csv', index=False)"
    ]
   },
   {
@@ -91,34 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "assignee\n",
-       "INTERNATIONAL BUSINESS MACHINES CORPORATION    5614\n",
-       "SAMSUNG ELECTRONICS CO LTD                     4128\n",
-       "MICROSOFT CORPORATION                          3011\n",
-       "PANASONIC CORPORATION                          2128\n",
-       "CANON KABUSHIKI KAISHA                         2044\n",
-       "KABUSHIKI KAISHA TOSHIBA                       1964\n",
-       "SONY CORPORATION                               1930\n",
-       "INTEL CORPORATION                              1567\n",
-       "HITACHI LTD                                    1273\n",
-       "HEWLETT PACKARD DEVELOPMENT COMPANY LP         1248\n",
+       "BOSTON SCIENTIFIC SCIMED INC                   1419\n",
+       "MONSANTO TECHNOLOGY LLC                        1405\n",
+       "MEDTRONIC INC                                  1289\n",
+       "PIONEER HI BRED INTERNATIONAL INC              1128\n",
+       "CARDIAC PACEMAKERS INC                         1071\n",
+       "WARSAW ORTHOPEDIC INC                           739\n",
+       "THE REGENTS OF THE UNIVERSITY OF CALIFORNIA     674\n",
+       "TYCO HEALTHCARE GROUP LP                        558\n",
+       "NOVARTIS AG                                     548\n",
+       "PACESETTER INC                                  518\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = df.loc[:,['patent_id','assignee']]\n",
-    "df.to_csv('patent_assignee.csv', index=False)\n",
+    "df.to_csv('patent_assignee_BIO.csv', index=False)\n",
     "\n",
     "counts = df.groupby('assignee').size()\n",
     "counts.sort_values(ascending=False,inplace=True)\n",
@@ -127,13 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "counts.to_csv('assignee_profile.csv')"
+    "counts.to_csv('assignee_profile_BIO.csv')  ### 엑셀로 header(assignee, num_patent) 붙임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('patent_EE&IT_08_12_vars.csv')\n",
+    "\n",
+    "df = df.loc[:,['patent_id','assignee']]\n",
+    "df.to_csv('patent_assignee_EE&IT.csv', index=False)\n",
+    "\n",
+    "counts = df.groupby('assignee').size()\n",
+    "counts.sort_values(ascending=False,inplace=True)\n",
+    "counts.to_csv('assignee_profile_EE&IT.csv') ### 엑셀로 header(assignee, num_patent) 붙임"
    ]
   }
  ],
