--- a/1 patent data processing/2_Fung data processing.ipynb
+++ b/1 patent data processing/2_Fung data processing.ipynb
@@ -58,11 +58,11 @@
     {
      "data": {
       "text/plain": [
-       "['state_code',\n",
+       "['country_code',\n",
        " 'patent_id',\n",
-       " 'raw_assignee',\n",
-       " 'country_code',\n",
        " 'pdpass',\n",
+       " 'raw_assignee',\n",
+       " 'state_code',\n",
        " 'assignee']"
       ]
      },
@@ -77,17 +77,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "cols = df.columns.tolist()\n",
-    "cols = [cols[1], cols[-1]] + cols[2:4] + [cols[0], cols[4]]\n",
+    "cols = [cols[1], cols[-1], cols[3], cols[2], cols[0], cols[4]]\n",
     "\n",
     "df = df[cols]\n",
     "df.to_csv('assignee.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['patent_id',\n",
+       " 'assignee',\n",
+       " 'raw_assignee',\n",
+       " 'pdpass',\n",
+       " 'country_code',\n",
+       " 'state_code']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols"
    ]
   },
   {
@@ -99,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,9 +133,9 @@
        "['patent_id',\n",
        " 'assignee',\n",
        " 'raw_assignee',\n",
+       " 'pdpass',\n",
        " 'country_code',\n",
        " 'state_code',\n",
-       " 'pdpass',\n",
        " 'num_assignees',\n",
        " 'num_claims',\n",
        " 'num_foreign_citations',\n",
@@ -121,7 +146,7 @@
        " 'num_self_future_citations']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -184,22 +209,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DW\\Anaconda2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2717: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "['patent_id',\n",
        " 'assignee',\n",
        " 'raw_assignee',\n",
+       " 'pdpass',\n",
        " 'country_code',\n",
-       " 'state_code',\n",
-       " 'pdpass']"
+       " 'state_code']"
       ]
      },
      "execution_count": 1,
@@ -223,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "raw = df.iloc[:,1:3]\n",
     "raw.drop_duplicates(inplace=True)\n",
+    "raw = raw.loc[pd.isnull(df['assignee'])==False,:]\n",
+    "raw.sort_values(by='assignee',inplace=True)\n",
     "raw.to_csv('assignee_raw.csv',index=False)"
    ]
   }
