compustat (08-12., bio) 처리
17.10.11

--- a/3 compustat/compustat processing 08-12.ipynb
+++ b/3 compustat/compustat processing 08-12.ipynb
@@ -50,11 +50,11 @@
     "\n",
     "os.chdir('E:/apps/compustat')\n",
     "\n",
-    "glb = pd.read_csv('compustat_10_glb.csv')\n",
-    "us = pd.read_csv('compustat_10_us.csv')\n",
-    "curcd = pd.read_csv('compustat_curcd_10.csv')\n",
+    "glb = pd.read_csv('compustat_08-12_glb.csv')\n",
+    "us = pd.read_csv('compustat_08-12_us.csv')\n",
+    "curcd = pd.read_csv('08-12_curcd.csv')\n",
     "\n",
-    "glb = glb.merge(curcd, how='left', on='gvkey')\n",
+    "glb = glb.merge(curcd, how='left', on=['gvkey','fyear'])\n",
     "us['curcd'] = 'USD'\n",
     "\n",
     "glb = pd.concat([glb,us],ignore_index=True)\n",
@@ -68,29 +68,27 @@
     "### 2. currecy 통일\n",
     "** 2.1 global, US 동시 등장 기업 정리 **\n",
     "- global 출신 data는 모두 ninoc == na 인 걸 활용해서 정리하자\n",
-    "- gvkey, ninoc 기준으로 오름차순 정렬 후 keep first 하면 끝 (na가 밑에 있으니까)"
+    "- gvkey, fyear, ninoc 기준으로 오름차순 정렬 후 keep first 하면 끝 (na가 밑에 있으니까)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44875 42819 2056\n"
+      "225916 215716 10200\n"
      ]
     }
    ],
    "source": [
     "a=len(glb)\n",
-    "glb.sort_values(by=['gvkey','ninoc'],inplace=True)\n",
-    "glb = glb.drop_duplicates(subset='gvkey',keep='first')\n",
-    "glb.to_csv('compustat_10_glbus.csv',index=False)\n",
+    "glb.sort_values(by=['gvkey','fyear','ninoc'],inplace=True)\n",
+    "glb = glb.drop_duplicates(subset=['gvkey','fyear'],keep='first')\n",
+    "glb.to_csv('compustat_08-12_glbus.csv',index=False)\n",
     "\n",
     "print a, len(glb), a-len(glb)"
    ]
@@ -110,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "53"
+       "46647"
       ]
      },
      "execution_count": 3,
@@ -120,7 +118,7 @@
    ],
    "source": [
     "# 동시 등장 기업 활용\n",
-    "currtr = pd.read_csv('compustat_currtr_10.csv')\n",
+    "currtr = pd.read_csv('08-12_currtr.csv')\n",
     "currtr = currtr.drop_duplicates()\n",
     "len(currtr)"
    ]
@@ -128,14 +126,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "102"
+       "664"
       ]
      },
      "execution_count": 4,
@@ -144,29 +140,20 @@
     }
    ],
    "source": [
-    "curr = glb['curcd'].to_frame()\n",
+    "curr = curcd.merge(currtr, how='left', on=['gvkey','fyear'])\n",
+    "del curr['gvkey']\n",
     "curr = curr.drop_duplicates()\n",
-    "curr = curr.merge(currtr, how='left', on='curcd')\n",
     "len(curr)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이런... currency당 rate 개수 = 1이 아니네 평균내자"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curr=curr.groupby('curcd').mean()\n",
-    "curr.to_csv('exchange_rate_10.csv')"
+    "curr=curr.groupby(['curcd','fyear']).mean()\n",
+    "curr.to_csv('exchange_rate_08-12.csv')"
    ]
   },
   {
@@ -183,52 +170,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['new_assignee',\n",
-       " 'conm',\n",
-       " 'act',\n",
-       " 'at',\n",
-       " 'consol',\n",
-       " 'datadate',\n",
-       " 'ebit',\n",
-       " 'emp',\n",
-       " 'fatb',\n",
-       " 'fate',\n",
-       " 'fatl',\n",
-       " 'fatp',\n",
-       " 'fic',\n",
-       " 'fopo',\n",
-       " 'fsrco',\n",
-       " 'fsrcopo',\n",
-       " 'fsrcopt',\n",
-       " 'fsrct',\n",
-       " 'fuseo',\n",
-       " 'fuset',\n",
-       " 'fyear',\n",
-       " 'gvkey',\n",
-       " 'nicon',\n",
-       " 'ninc',\n",
-       " 'ninoc',\n",
-       " 'ppegt',\n",
-       " 'ppent',\n",
-       " 'revt',\n",
-       " 'teq',\n",
-       " 'xlr',\n",
-       " 'xrd',\n",
-       " 'xstfws',\n",
-       " 'curcd']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#-*- coding: utf-8 -*-\n",
     "import pandas as pd\n",
@@ -236,37 +180,34 @@
     "\n",
     "os.chdir('E:/apps/compustat')\n",
     "\n",
-    "glb = pd.read_csv('compustat_10_glbus.csv')\n",
-    "cols = glb.columns.tolist()\n",
-    "cols"
+    "glb = pd.read_csv('compustat_08-12_glbus.csv')\n",
+    "glb = glb.loc[pd.isnull(glb['curcd'])==False]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "split = ['new_assignee','conm','consol','datadate','fic','fyear','gvkey']\n",
+    "cols = glb.columns.tolist()\n",
+    "split = ['conm','consol','datadate','fic','gvkey']\n",
     "for i in split:\n",
     "    cols.remove(i)\n",
     "\n",
-    "split.append('curcd')\n",
+    "split += ['curcd','fyear']\n",
     "tmp_num = glb[cols]\n",
     "tmp = glb[split]\n",
     "\n",
-    "curr = pd.read_csv('exchange_rate_10.csv')\n",
+    "curr = pd.read_csv('exchange_rate_08-12.csv')\n",
     "\n",
-    "tmp_num = tmp_num.merge(curr, how='left', on='curcd')\n",
-    "del tmp_num['curcd']"
+    "tmp_num = tmp_num.merge(curr, how='left', on=['curcd','fyear'])\n",
+    "tmp_num.drop(['curcd', 'fyear'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +224,7 @@
     "del tmp_num['currtr']\n",
     "\n",
     "glb = pd.concat([tmp,tmp_num], axis=1)\n",
-    "glb.to_csv('compustat_10_usd.csv',index=False)"
+    "glb.to_csv('compustat_08-12_usd.csv',index=False)"
    ]
   }
  ],
