--- a/Exploring data.ipynb
+++ b/Exploring data.ipynb
@@ -393,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -430,9 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -440,16 +442,16 @@
       "text/plain": [
        "['14',\n",
        " '0:92-cv-00398-MJP',\n",
-       " '8',\n",
+       " '5',\n",
        " '',\n",
-       " '1994-03-18',\n",
-       " 'MOTION by plaintiff AD-TECK LIMITED, plaintiff Peter Philipp, plaintiff Larry Brittain, plaintiff Robert M. Spargo Sr., plaintiff Ulf Boshamer to quash noticed depositions of certain individuals (former empl) (Entered: 03/21/1994)',\n",
-       " '55',\n",
+       " '1994-04-04',\n",
+       " 'CONSENT ORDER, Response to motion reset to 4/6/94 for response to [49-1] motion to compel defendants to answer interrogatories and request for production, for [49-2] motion for sanctions ; mld ( signed by Judge Matthew J. Perry ) (former empl) (Entered: 04/05/1994)',\n",
+       " '58',\n",
        " '',\n",
        " '']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
