examiner dummy 추출
17.10.17

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -1016,12 +1016,14 @@
     "\n",
     "patent_id : 첫 doc-number  \n",
     "app_cited : patcit / document-id / country='US' & len(doc-number) > 7  \n",
-    "* ** country != 'US'에서 탈출 (다음 문서로 넘너가면 됨) **"
+    "* ** country != 'US'에서 탈출 (다음 문서로 넘너가면 됨) **\n",
+    "\n",
+    "examiner: citation / category  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1032,7 @@
        "'D7643386'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,39 +1108,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2005/0265141'"
+       "('5673247', 'cited by examiner')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cit=root.iter('patcit')\n",
-    "did = cit.next()[0]\n",
+    "cit=root.iter('citation')\n",
+    "k = cit.next()\n",
+    "did = k[0][0]\n",
+    "cited = k[1].text\n",
     "a=did.find('doc-number').text\n",
-    "a"
+    "a, cited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cit_dum = 1 if cited.split()[-1] == 'examiner' else 0\n",
+    "cit_dum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20050265141'"
+       "'5673247'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -1160,7 +1187,7 @@
     "\n",
     "with open('app_citation.csv', 'wb') as cit:\n",
     "    writer = csv.writer(cit,quoting=csv.QUOTE_ALL)\n",
-    "    writer.writerow(['patent_id','app_cited'])\n",
+    "    writer.writerow(['patent_id','app_cited','by_examiner'])\n",
     "    \n",
     "    while not date=='20100126':\n",
     "        filename = 'xmls/ipgb'+ date + '.xml'   #making filename\n",
@@ -1169,17 +1196,24 @@
     "            root = et.fromstring(doc)\n",
     "            n = root.iter('doc-number')\n",
     "            pid = n.next().text\n",
+    "\n",
     "            try:\n",
     "                pid = int(pid)                          \n",
-    "                for cit in root.iter('patcit'):   #using iter because of multi-assignee apps \n",
-    "                    did = cit[0]\n",
+    "                for cit in root.iter('citation'):   #using iter because of multi-assignee apps \n",
+    "                    did = cit[0][0]\n",
+    "                    cited = cit[1].text              \n",
+    "                    \n",
     "                    if did.find('country').text != 'US':\n",
     "                        break \n",
-    "                        \n",
+    "                     \n",
     "                    cid = did.find('doc-number').text\n",
-    "                    if len(cid)>8:\n",
-    "                        cid=cid.replace('/','')\n",
-    "                        writer.writerow([pid,cid])\n",
+    "                    if len(cid) < 8:\n",
+    "                        continue\n",
+    "                    \n",
+    "                    cid=cid.replace('/','')\n",
+    "                    cit_dum = 1 if cited.split()[-1] == 'examiner' else 0\n",
+    "                    \n",
+    "                    writer.writerow([pid,cid,cit_dum])\n",
     "                        \n",
     "            except ValueError:      #if pid != int, go to the next doc\n",
     "                continue    \n",
@@ -1187,6 +1221,26 @@
     "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
     "        date += dt.timedelta(weeks=1)\n",
     "        date = date.strftime('%Y%m%d')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20100126'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date"
    ]
   },
   {
