litigation_gvkey_IT 완료
17.10.19

--- a/litigation matching.ipynb
+++ b/litigation matching.ipynb
@@ -339,6 +339,48 @@
    "source": [
     "df.to_csv('lit.names.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. manual matching 끝난 거 정리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5385 5137\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.chdir('E:/apps')\n",
+    "df = pd.read_csv('patent_lit_key_temp.csv')\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "df1 = df[pd.isnull(df['name'])==False]\n",
+    "print len(df), len(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df1.to_csv('litigation_gvkey.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
