--- a/1 patent data processing/1_USPTO Patent selection.ipynb
+++ b/1 patent data processing/1_USPTO Patent selection.ipynb
@@ -87,23 +87,45 @@
    "source": [
     "IT = ['2','4']\n",
     "YEAR = []   \n",
-    "for i in range(0,5):\n",
-    "    y=2008\n",
+    "for i in range(0,8):\n",
+    "    y=2005\n",
     "    y += i\n",
     "    YEAR.append(str(y))\n",
     "\n",
-    "with open('raw_uspto/historical_masterfile.csv','rb') as raw,open('uspto_EE&IT_08_12.csv','wb') as sel:\n",
+    "with open('raw_uspto/historical_masterfile.csv','rb') as raw,open('uspto_EE&IT_05_12.csv','wb') as sel, open('uspto_BIO_05_12.csv','wb') as sel2:\n",
     "    reader = csv.reader(raw)\n",
     "    header = reader.next()\n",
     "    \n",
     "    writer = csv.writer(sel)\n",
+    "    writer2 = csv.writer(sel2)\n",
+    "    \n",
     "    writer.writerow(header)\n",
+    "    writer2.writerow(header)\n",
     "    \n",
     "    for line in reader:\n",
-    "        if line[3][0] in IT and line[9][-4:] in YEAR:\n",
-    "            writer.writerow(line)    \n",
-    "            \n",
-    "with open('raw_usptohistorical_masterfile.csv','rb') as raw,open('uspto_BIO_08_12.csv','wb') as sel:\n",
+    "        try:\n",
+    "            pid = int(line[2])\n",
+    "            if pid > 6836898 and pid < 8341760:\n",
+    "                if line[3][0] in IT and line[9][-4:] in YEAR:\n",
+    "                    writer.writerow(line)\n",
+    "\n",
+    "                elif line[3][0] =='3' and line[9][-4:] in YEAR:\n",
+    "                    writer2.writerow(line)\n",
+    "                \n",
+    "        except ValueError:      #if pid != int, go to the next pat\n",
+    "                continue    \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('raw_uspto/historical_masterfile.csv','rb') as raw,open('uspto_BIO_05_12.csv','wb') as sel:\n",
     "    reader = csv.reader(raw)\n",
     "    header = reader.next()\n",
     "    \n",
