--- a/2 app data processing/2_selecting appropriate variables from raw data.ipynb
+++ b/2 app data processing/2_selecting appropriate variables from raw data.ipynb
@@ -129,6 +129,40 @@
    "source": [
     "그냥 원래 null로 적혀있음 어쩔 수 없음"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__app class 정리__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-*- coding: utf-8 -*-\n",
+    "\n",
+    "import csv\n",
+    "import os\n",
+    "\n",
+    "os.chdir('E:/apps/app')\n",
+    "\n",
+    "with open('app_class_raw.csv','rb') as f, open('app_class.csv','wb') as fw:\n",
+    "    reader = csv.reader(f)\n",
+    "    writer = csv.writer(fw)\n",
+    "    \n",
+    "    target = [0,2,3]\n",
+    "    \n",
+    "    for line in reader:\n",
+    "        try:\n",
+    "            writer.writerow([line[i] for i in target])\n",
+    "            \n",
+    "        except:\n",
+    "            continue"
+   ]
   }
  ],
  "metadata": {
