--- a/3 compustat/compustat processing 08-12.ipynb
+++ b/3 compustat/compustat processing 08-12.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +111,19 @@
        "46647"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 동시 등장 기업 활용\n",
+    "#-*- coding: utf-8 -*-\n",
+    "import pandas as pd\n",
+    "import os, math\n",
+    "\n",
+    "os.chdir('E:/apps/compustat')\n",
+    "\n",
     "currtr = pd.read_csv('08-12_currtr.csv')\n",
     "currtr = currtr.drop_duplicates()\n",
     "len(currtr)"
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,12 +140,13 @@
        "664"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "curcd = pd.read_csv('08-12_curcd.csv')\n",
     "curr = curcd.merge(currtr, how='left', on=['gvkey','fyear'])\n",
     "del curr['gvkey']\n",
     "curr = curr.drop_duplicates()\n",
@@ -148,12 +155,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 229 234\n"
+     ]
+    }
+   ],
+   "source": [
+    "curr = curr.loc[pd.isnull(curr['currtr'])==False]\n",
+    "\n",
+    "usd = curr.loc[curr['curcd']=='USD']\n",
+    "curr = curr.loc[curr['currtr']!=1]\n",
+    "\n",
+    "exrate = pd.concat([usd,curr])\n",
+    "\n",
+    "print len(usd), len(curr), len(exrate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "curr=curr.groupby(['curcd','fyear']).mean()\n",
-    "curr.to_csv('exchange_rate_08-12.csv')"
+    "exrate=exrate.groupby(['curcd','fyear']).mean()\n",
+    "exrate.to_csv('exchange_rate_08-12.csv')"
    ]
   },
   {
@@ -168,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -186,8 +219,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cols = glb.columns.tolist()\n",
@@ -207,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -223,8 +258,173 @@
     "tmp_num = tmp_num.apply(usd, axis=1,reduce = False)\n",
     "del tmp_num['currtr']\n",
     "\n",
+    "tmp.reset_index(drop=True, inplace=True)\n",
+    "tmp_num.reset_index(drop=True, inplace=True)\n",
+    "\n",
     "glb = pd.concat([tmp,tmp_num], axis=1)\n",
     "glb.to_csv('compustat_08-12_usd.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "215711 215711 215711\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(tmp), len(tmp_num), len(glb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. net income 통일\n",
+    "연결과 별도 동시 존재할 때, 연결 기준으로 통합  \n",
+    "__ =>  NINC < NICON__ for non-US company\n",
+    "사전에 excel로 __consol, ninoc__ 기준으로 정렬,  \n",
+    "36035: ninoc -> nicon  \n",
+    "208643: nicon -> ninc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-*- coding: utf-8 -*-\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "os.chdir('E:/apps/compustat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('compustat_08-12_usd.csv')\n",
+    "df.sort_values(by=['consol','ninoc'])\n",
+    "print list(df).index('consol'), list(df).index('nicon')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "nicon = 22, ninc = 23, ninoc = 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C N\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df.iloc[208643,1], df.iloc[208644,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104821.0 nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df.iloc[36035,24], df.iloc[36036,24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ni']=np.nan\n",
+    "list(df).index('ni')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(df)):\n",
+    "    if i<36036:\n",
+    "        df.iloc[i,32] = df.iloc[i,24]\n",
+    "    \n",
+    "    elif i>36035 and i<208644:\n",
+    "        df.iloc[i,32] = df.iloc[i,22]\n",
+    "        \n",
+    "    else:\n",
+    "        df.iloc[i,32] = df.iloc[i,23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.drop(['nicon','ninc','ninoc'], axis=1, inplace=True)\n",
+    "df.sort_values(by=['gvkey','fyear'],inplace=True)\n",
+    "df.to_csv('compustat_08-12.csv',index=False)"
    ]
   }
  ],
